<resources>
    <string name="app_name">Yedidim5.3</string>
    <string name="image">image</string>
    <string name="logo">LOGO</string>
    <string name="input1">Input1</string>
    <string name="input2">input2</string>
    <string name="todo2">TODO</string>
    <string name="language">       בחר שפה     </string>
    <string name="code">  הכנס קוד כניסה  </string>
    <string name="todo3">TODO</string>
    <string name="text">אפליקציית ניווט עירוני</string>
    <string name="to">TODO</string>
    <string name="title_activity_main">Yedidim6</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Help">לחצן מצוקה</string>
    <string name="navEnd">נווט לסיום</string>
    <string name="location">מיקום שלי</string>
    <string name="instruction">הוראות שימוש</string>
    <string name="scores">טבלת קבוצות</string>
    <string name="Mission">טבלת משימות</string>
    <string name="todo5">TODO</string>
    <string name="title_activity_maps">Map</string>
    <string name="todo">TODO</string>
    <string name="exit">exit</string>
    <string name="tod2">TODO</string>
    <string name="location2">location</string>
    <string name="position">Position</string>
    <string name="Team"> Team</string>
    <string name="missionDone"> Mission Done</string>
    <string name="points"> Points</string>
</resources>
