<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoresActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backgroundscreen" />

    <ImageButton
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_delete"
        android:contentDescription="@string/tod2" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit">

        <TextView
            android:id="@+id/record_position"
            android:layout_width="59dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/myframe"
            android:fontFamily="serif"
            android:text="@string/position"
            android:textColor="#000"
            app:layout_constraintEnd_toStartOf="@+id/record_Team"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/record_points"
            android:layout_width="78dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/myframe"
            android:fontFamily="serif"
            android:text="@string/points"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/record_Mission"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/record_Mission"
            android:layout_width="106dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/myframe"
            android:fontFamily="serif"
            android:text="@string/missionDone"

            android:textColor="#000"
            app:layout_constraintEnd_toStartOf="@+id/record_points"
            app:layout_constraintStart_toEndOf="@+id/record_Team"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/record_Team"
            android:layout_width="141dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/myframe"
            android:fontFamily="serif"
            android:text="@string/Team"
            android:textColor="#000"
            app:layout_constraintEnd_toStartOf="@+id/record_Mission"
            app:layout_constraintStart_toEndOf="@+id/record_position"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>