<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity"
    tools:layout_editor_absoluteY="25dp">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backgroundscreen" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="256dp"
            android:layout_height="194dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo2"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="265dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="50dp"
            android:autofillHints=""
            android:background="@drawable/buttoninputtext"
            android:ems="10"
            android:inputType="number"
            android:text="  הכנס קוד כניסה "
            android:textSize="60px"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:ignore="MissingConstraints"
            tools:targetApi="o" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="265dp"
            android:layout_height="63dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="65dp"
            android:background="@drawable/buttoninputtext"
            app:layout_constraintBottom_toTopOf="@+id/imageButton3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="185dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="99dp"
            android:layout_marginBottom="52dp"
            android:contentDescription="@string/todo3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/button1"
            tools:ignore="MissingConstraints" />



    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>