<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriptionActivity">
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backgroundscreen" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="388dp"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="240dp"
            android:layout_height="152dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/todo2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/team"
            android:layout_width="290dp"
            android:layout_height="59dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:autofillHints=""
            android:background="@drawable/buttoninputtext"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="     הכנס שם קבוצה  "
            android:textSize="60px"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.325"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/tel"
            android:layout_width="290dp"
            android:layout_height="59dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/buttoninputtext"
            android:ems="10"
            android:inputType="phone"
            android:text="     הכנס מס טלפון  "
            android:textSize="60px"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/nameTeamHead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team" />

        <EditText
            android:id="@+id/nameTeamHead"
            android:layout_width="288dp"
            android:layout_height="59dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="-1dp"
            android:autofillHints=""
            android:background="@drawable/buttoninputtext"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="    שם ראש קבוצה "
            android:textSize="60px"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/inscription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tel"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/inscription"
            android:layout_width="249dp"
            android:layout_height="65dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/to"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tel"
            app:layout_constraintVertical_bias="0.504"
            app:srcCompat="@drawable/button3" />

        <ImageButton
            android:id="@+id/letGo"
            android:layout_width="195dp"
            android:layout_height="62dp"
            android:layout_marginStart="95dp"
            android:layout_marginEnd="95dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/todo3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inscription"
            app:srcCompat="@drawable/button2" />


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>